# objects

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  deny.toml  mise.toml
.github/workflows/: ci.yml  release-api.yml  release-image.yml  release-sdk.yml  security.yml
bench/: Cargo.toml
bench/benches/: bench.rs  download_throughput.rs  http_download_throughput.rs  http_upload_throughput.rs  step_breakdown.rs  upload_throughput.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: cli.rs  config.rs  error.rs  handoff.rs  lib.rs  main.rs  metrics.rs  telemetry.rs  test_support.rs  upload_token.rs
crates/server/src/middleware/: auth.rs
crates/server/src/routes/: buckets.rs  healthz.rs  mod.rs  objects.rs  upload_tokens.rs
crates/server/src/s3/: access.rs  auth.rs  error.rs  handler.rs  mod.rs
crates/server/tests/: handoff_e2e.rs  handoff_rigorous.rs  handoff_smoke.rs
crates/server/tests/handoff_harness/: mod.rs
crates/server/tests/rest/: buckets.rs  common.rs  healthz.rs  main.rs  objects.rs  openapi.rs  tls.rs
crates/server/tests/s3/: auth.rs  common.rs  cross_protocol.rs  main.rs  multipart.rs  objects.rs
crates/storage/: Cargo.toml
crates/storage/src/: bucket.rs  error.rs  gc.rs  lib.rs  multipart.rs  read.rs  sync.rs  types.rs  write.rs  xattr.rs
openapi/: v1.json
sdk/ts/: README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
sdk/ts/__tests__/: auth.test.ts  buckets.test.ts  conditional.test.ts  global-setup.ts  harness.ts  hooks.test.ts  list.test.ts  metadata.test.ts  objects.test.ts  range.test.ts  react.test.tsx  tls.test.ts
sdk/ts/scripts/: generate-types.mjs
sdk/ts/src/: client.ts  errors.ts  index.ts  types.ts
sdk/ts/src/react/: index.tsx
sdk/ts/src/utils/: camelize.ts
xtask/src/: main.rs
