[workspace]
members = ["bench", "crates/index", "crates/server", "crates/storage", "xtask"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
fjall = "2"
md-5 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
xattr = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
