[workspace]
members = ["bench", "crates/index", "crates/server", "crates/storage"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
fjall = "2"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
hyper = "1"
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
libc = "0.2"
md-5 = "0.10"
memmap2 = "0.9"
mime = "0.3"
opentelemetry = { version = "0.31", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
prometheus = "0.14"
rcgen = "0.14"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream", "http2"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
s3s = "0.13"
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tempfile = "3"
thiserror = "2"
tikv-jemallocator = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "catch-panic", "timeout", "cors"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
xattr = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
