[package]
name = "beyond-objects-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dev-dependencies]
beyond-objects-storage = { path = "../crates/storage" }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "download_throughput"
harness = false
