[package]
name = "beyond-objects"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "beyond_objects"
path = "src/lib.rs"

[[bin]]
name = "beyond-objects"
path = "src/main.rs"

[dependencies]
beyond-objects-index = { path = "../index" }
beyond-objects-storage = { path = "../storage" }

anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
mime = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "rest"
path = "tests/rest/main.rs"
