[package]
name = "beyond-objects"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "beyond_objects"
path = "src/lib.rs"

[[bin]]
name = "beyond-objects"
path = "src/main.rs"

[dependencies]
beyond-objects-index = { path = "../index" }
beyond-objects-storage = { path = "../storage" }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
memmap2 = { workspace = true }
mime = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
prometheus = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
s3s = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }

[dev-dependencies]
aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rustls", "rt-tokio"] }
aws-smithy-async = { version = "1", features = ["rt-tokio"] }
aws-smithy-runtime = { version = "1", features = ["client", "connector-hyper-0-14-x", "rt-tokio"] }
aws-smithy-types = { version = "1", features = ["http-body-1-x"] }
rcgen = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "rest"
path = "tests/rest/main.rs"

[[test]]
name = "s3"
path = "tests/s3/main.rs"
