[package]
name = "beyond-objects-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
hex.workspace = true
md-5.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
xattr.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
